--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<%= javascript_pack_tag 'hello_vue' %>
+<div id="app">
+  <navbar></navbar>
+  <main-contents></main-contents>
+</div>
+
+<%= javascript_pack_tag 'todo' %>
