finish data sendng

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,3 +12,11 @@ table {
   width: auto;
   padding-top: 20px;
 }
+
+.title, .mainbody {
+  margin: auto;
+  text-align: center;
+}
+.delete {
+  margin-left: 10px;
+}
